# gears_game

./: README.md  figure.py  figure_draw.py  gear.py  gear_draw.py  main.py  pyproject.toml  test.py  utils.py
in_c++/: a.out  main.cpp
