[project]
name = "gear"
version = "0.1.0"
description = ""
authors = [
    {name = "lesha"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
